--- a/public/book/index.html
+++ b/public/book/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-cn" dir="ltr">
-    <head><meta charset='utf-8'>
+    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="# 说明 书籍归档，包括自己原创和收集来的。 # 收集来的 Markdown·简单的世界 (原文地址) # 个人原创">
 <title>书籍</title>
 
-<link rel='canonical' href='https://jf666666.github.io/book/'>
+<link rel='canonical' href='http://localhost:1313/book/'>
 
 <link rel="stylesheet" href="/scss/style.min.8e60baf4cd3fc55968717a6e39762f4d28ed7ef6007566b6c7970ad0fe907198.css"><meta property='og:title' content="书籍">
 <meta property='og:description' content="# 说明 书籍归档，包括自己原创和收集来的。 # 收集来的 Markdown·简单的世界 (原文地址) # 个人原创">
-<meta property='og:url' content='https://jf666666.github.io/book/'>
+<meta property='og:url' content='http://localhost:1313/book/'>
 <meta property='og:site_name' content='ziFeng&#39;s Blog'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="书籍">
@@ -525,7 +525,7 @@ window.markmap = {
        onload='renderMathInElement(document.body, null);'>
 </script>
 <script src="https://cdn.jsdelivr.net/npm/mermaid@9.3.0/dist/mermaid.min.js" integrity="sha512-ku2nmBrzAXY5YwohzTqLYH1/lvyMrpTVxgQKrvTabd/b/uesqltLORdmpVapYv6QhZVCLUX6wkvFaKOAY4xpUA==" crossorigin="anonymous"></script>
-<script src="/js/main.min.beed1be94ebe04a73a3d983583046daf3fd8ac54857fa72d94a1e83c470d9eaf.js" integrity="sha256-vu0b6U6&#43;BKc6PZg1gwRtrz/YrFSFf6ctlKHoPEcNnq8=" crossorigin="anonymous"></script>
+<script src="/js/main.js"></script>
 
 
     </body>
